tests/baselines/reference/parserErrorRecoveryIfStatement3.errors.txt
parserErrorRecoveryIfStatement3.ts(3,9): error TS2304: Cannot find name 'a'.
parserErrorRecoveryIfStatement3.ts(4,3): error TS1005: ')' expected.


==== parserErrorRecoveryIfStatement3.ts (2 errors) ====
    class Foo {
      f1() {
        if (a.b
            ~
!!! error TS2304: Cannot find name 'a'.
      }
      ~
!!! error TS1005: ')' expected.
!!! related TS1007 parserErrorRecoveryIfStatement3.ts:3:8: The parser expected to find a ')' to match the '(' token here.
      f2() {
      }
      f3() {
      }
    }